--- a/contrast_map.ipynb
+++ b/contrast_map.ipynb
@@ -20,8 +20,11 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import LightSource\n",
     "%matplotlib inline\n",
+    "%config InlineBackend.figure_formats=[\"png\"]\n",
     "\n",
     "import re\n",
+    "from importlib import reload\n",
+    "#syntax: fugi = reload(fugi)\n",
     "\n",
     "import mplhep as hep\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
@@ -201,22 +204,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "totMFPAD\n",
-    "np.sum(r_nhistRCR)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "if fileSCL and fileSCR is not None:\n",
+    "\n",
+    "    fugi = reload(fugi)\n",
     "    fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
-    "    aspect=(phiM.max()/cosM.max())\n",
     "    # cs1=ax1.contourf(phiM,cosM,r_norm_nhistSCL.T, cmap=cmap_temp, levels=15)\n",
-    "    cs1=ax1.pcolormesh(phiM,cosM,r_norm_nhistSCL.T,shading='gouraud', cmap=cmap_temp)\n",
-    "    \n",
+    "    # cs1=ax1.pcolormesh(phiM,cosM,r_norm_nhistSCL.T,shading='gouraud', cmap=cmap_temp)\n",
+    "    cs1,ax1=fugi.plot_interpolation(phiM,cosM,r_norm_nhistSCL.T, ax=ax1, cmap=cmap_temp, xstep=1, ystep=0.005)\n",
+    "\n",
+    "    aspect=(phiM.max()/cosM.max())    \n",
     "    ax1.set_title(\"MFPAD SCL \"+CH+\"_\"+en)\n",
     "    ax1.set_xlabel('phi [DEG]')\n",
     "    ax1.set_ylabel('cos(theta) [adm]')\n",
@@ -238,7 +234,7 @@
     "    cbar2.set_ticklabels([\"min\",\"max\"])\n",
     "    cbar2.ax.set_ylabel('normalised counts')\n",
     "    \n",
-    "    plt.show()"
+    "    # plt.show()"
    ]
   },
   {
@@ -251,7 +247,9 @@
     "    fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
     "    aspect=(phiM.max()/cosM.max())\n",
     "    # cs1=ax1.contourf(phiM,cosM,r_norm_nhistSCR.T, cmap=cmap_temp, levels=15)\n",
-    "    cs1=ax1.pcolormesh(phiM,cosM,r_norm_nhistSCR.T,shading='gouraud', cmap=cmap_temp)\n",
+    "    # cs1=ax1.pcolormesh(phiM,cosM,r_norm_nhistSCR.T,shading='gouraud', cmap=cmap_temp)\n",
+    "    cs1,ax1=fugi.plot_interpolation(phiM,cosM,r_norm_nhistSCR.T, ax=ax1, cmap=cmap_temp, xstep=1, ystep=0.01)\n",
+    "\n",
     "\n",
     "    ax1.set_title(\"MFPAD SCR n0 \"+CH+\"_\"+en)\n",
     "    ax1.set_xlabel('phi [DEG]')\n",
@@ -262,7 +260,9 @@
     "    cbar1.set_ticklabels([\"min\",\"max\"])\n",
     "\n",
     "    # cs2=ax2.contourf(phiM,cosM,r_norm_nhistSCL.T,cmap=cmap_temp,levels=15)\n",
-    "    cs2=ax2.pcolormesh(phiM,cosM,r_norm_nhistSCL.T,shading='gouraud', cmap=cmap_temp)\n",
+    "    # cs2=ax2.pcolormesh(phiM,cosM,r_norm_nhistSCL.T,shading='gouraud', cmap=cmap_temp)\n",
+    "    cs2,ax2=fugi.plot_interpolation(phiM,cosM,r_norm_nhistSCL.T, ax=ax2, cmap=cmap_temp, xstep=1, ystep=0.01)\n",
+    "\n",
     "\n",
     "    ax2.set_title(\"MFPAD SCL n0 \"+CH+\"_\"+en)\n",
     "    ax2.set_xlabel('phi [DEG]')\n",
@@ -274,7 +274,7 @@
     "    cbar2.ax.set_ylabel('normalised counts')\n",
     "\n",
     "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)\n",
-    "    plt.show()"
+    "    # plt.show()"
    ]
   },
   {
@@ -287,7 +287,9 @@
     "aspect=(phiM.max()/cosM.max())\n",
     "\n",
     "# cs1=ax1.contourf(phiM,cosM,r_norm_nhistRCR.T, cmap=cmap_temp, levels=15)\n",
-    "cs1=ax1.pcolormesh(phiM,cosM,r_norm_nhistRCR.T,shading='gouraud', cmap=cmap_temp)\n",
+    "# cs1=ax1.pcolormesh(phiM,cosM,r_norm_nhistRCR.T,shading='gouraud', cmap=cmap_temp)\n",
+    "cs1,ax1=fugi.plot_interpolation(phiM,cosM,r_norm_nhistRCR.T, ax=ax1, cmap=cmap_temp, xstep=1, ystep=0.01)\n",
+    "\n",
     "\n",
     "ax1.set_title(\"MFPAD RCR n0 \"+CH+\"_\"+en)\n",
     "ax1.set_xlabel('phi [DEG]')\n",
@@ -298,7 +300,9 @@
     "cbar1.set_ticklabels([\"min\",\"max\"])\n",
     "\n",
     "# cs2=ax2.contourf(phiM,cosM,r_norm_nhistRCL.T,cmap=cmap_temp,levels=15)\n",
-    "cs2=ax2.pcolormesh(phiM,cosM,r_norm_nhistRCL.T,shading='gouraud', cmap=cmap_temp)\n",
+    "# cs2=ax2.pcolormesh(phiM,cosM,r_norm_nhistRCL.T,shading='gouraud', cmap=cmap_temp)\n",
+    "cs2,ax2=fugi.plot_interpolation(phiM,cosM,r_norm_nhistRCL.T, ax=ax2, cmap=cmap_temp, xstep=1, ystep=0.01)\n",
+    "\n",
     "\n",
     "ax2.set_title(\"MFPAD RCL n0 \"+CH+\"_\"+en)\n",
     "ax2.set_xlabel('phi [DEG]')\n",
@@ -330,7 +334,9 @@
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "# cs=ax.contourf(phiM,cosM,totMFPAD.T, cmap=cmap_temp, levels=20)\n",
-    "cs=ax.pcolormesh(phiM,cosM,totMFPAD.T,shading='gouraud', cmap=cmap_temp)\n",
+    "# cs=ax.pcolormesh(phiM,cosM,totMFPAD.T,shading='gouraud', cmap=cmap_temp)\n",
+    "cs,ax=fugi.plot_interpolation(phiM,cosM,totMFPAD.T, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01)\n",
+    "\n",
     "ax.set_title(\"MFPAD tot \"+CH+\"_\"+en)\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
@@ -352,8 +358,10 @@
    "outputs": [],
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "# cs=ax.contourf(phiM,cosM,mPECD_norm.T, cmap=cmap_temp)#, levels=24)\n",
-    "cs=ax.pcolormesh(phiM,cosM,mPECD_norm.T*100,shading='gouraud', vmin=-8.5, vmax=8.5, cmap=cmap_temp)\n",
+    "# cs=ax.contourf(phiM,cosM,mPECD_norm.T*100, cmap=cmap_temp)#, levels=24)\n",
+    "# cs=ax.pcolormesh(phiM,cosM,mPECD_norm.T*100,shading='gouraud', vmin=-8.5, vmax=8.5, cmap=cmap_temp)\n",
+    "cs,ax=fugi.plot_interpolation(phiM,cosM,mPECD_norm.T*100, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01)\n",
+    "\n",
     "ax.set_title(\"contrast map \"+CH+\"_\"+en)\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
@@ -392,6 +400,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   }
   }
  },
  "nbformat": 4,
